Using empty pseudo selector and blank image dataURI to battle IE's ridiculous hasLayout bug.

--- a/modules/ve2/ce/styles/ve.ce.Node.css
+++ b/modules/ve2/ce/styles/ve.ce.Node.css
@@ -16,12 +16,12 @@
 	width: 1px;*/
 }
 
-.ve-ce-branchNode h1,
-.ve-ce-branchNode h2,
-.ve-ce-branchNode h3,
-.ve-ce-branchNode h4,
-.ve-ce-branchNode h5,
-.ve-ce-branchNode h6,
-.ve-ce-branchNode p {
-	min-height: 1em;
+.ve-ce-branchNode h1:empty:before,
+.ve-ce-branchNode h2:empty:before,
+.ve-ce-branchNode h3:empty:before,
+.ve-ce-branchNode h4:empty:before,
+.ve-ce-branchNode h5:empty:before,
+.ve-ce-branchNode h6:empty:before,
+.ve-ce-branchNode p:empty:before {
+	content: url('data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==');
 }
